Registro, Modificación y Visualización con Imágenes
Se modificó parte de la base de datos, para hacer que fuera más optimizable, se agregaró y modificó la parte del código que acepta imágenes tanto en la vista como en la base de datos

--- a/Login.html
+++ b/Login.html
@@ -41,7 +41,7 @@
         
         
         <button type = "button" id="botonSubir">Iniciar Sesion</button>
-        <a href="../Registro/registro.html">No tienes cuenta? Registrarte aqui</a>
+        <a href="../bdm-Tienda/registro.html">No tienes cuenta? Registrarte aqui</a>
 
     </form>
 </div>
