--- a/EditarPerfil.html
+++ b/EditarPerfil.html
@@ -45,7 +45,7 @@
     <div class="header">
         <h2>Editar Perfil</h2>
     </div>
-    <form id="form" class="form">
+    <form id="form" class="form"  enctype="multipart/form-data">
         <div class="form-control">
             <label for="username">Usuario</label>
             <input type="text" placeholder="Usuario" id="Usuario" />
@@ -55,7 +55,7 @@
         </div>
         <div class="form-control">
             <label for="email">Nombre</label>
-            <input type="email" placeholder="Ejemplo@gmail.com" id="Nombre" />
+            <input type="text" placeholder="Ejemplo@gmail.com" id="Nombre" />
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
@@ -74,9 +74,9 @@
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
-        <div class="form-control">
-            <label class="titulo-control">Imagen de perfil</label>
-            <input type="text" placeholder="Imagen.jpg" id="Imagen" />
+        <div class="form-control">            
+            <label class="">Imagen de perfil</label>
+            <input type="file" id="Imagen" accept="image/*" />
         <div>
         <button type = "button" id="botonSubir">EDITAR</button>
     </form>
