Cambios - Productos con Imagenes
Se hicieron los cambios completos con logica incluida para que se puedan usar imagenes dentro del proyecto con los productos

--- a/Login.html
+++ b/Login.html
@@ -20,7 +20,7 @@
     <form id="form" class="form">
 
         <div class="icono-perfil-container">
-            <img class="icono-perfil" src="../../resources/usuario.png">
+            <img class="icono-perfil" src="../bdm-Tienda/img/imageInteractive.png">
         </div>
        
         <div class="form-control">
