--- a/PerfilVen.html
+++ b/PerfilVen.html
@@ -89,8 +89,8 @@
 
                </table>
 
-               <td><Button class="button-Mensaje" onclick="window.location.href='./chat.html'">Mensaje</Button></td>
-			   <td><Button class="button-Lista" onclick="window.location.href='./listaAgena.html'">Listas</Button></td>
+               <td><Button class="button-Mensaje" onclick="window.location.href='chat.html'">Mensaje</Button></td>
+			   <td><Button class="button-Lista" onclick="window.location.href='listaAgena.html'">Listas</Button></td>
                 
             </div>
             </div>
