Redireción a registro.html
solo cambié la redirección que te manda al registro

--- a/Login.html
+++ b/Login.html
@@ -63,7 +63,7 @@
                 <button type="button" id="botonSubir">Iniciar Sesion</button>
                 <div class="registro text-white h6">
                     <span>¿No tienes cuenta? </span>
-                    <span><a href="../Registro/registro.html">Registrarte aquí</a></span>
+                    <span><a href="registro.html">Registrarte aquí</a></span>
                 </div>
             </form>
         </div>
