--- a/VentasVendedor.html
+++ b/VentasVendedor.html
@@ -8,109 +8,114 @@
 	<link rel="stylesheet" href="./Css/navbar.css"> 
 	<script src="./Js/jquery-3.7.1.min.js"></script>
 	<script src="./Js/principal.js"></script>
+
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<title>Ventas Vendedor</title>
 </head>
 <body>
-	<ul>
+	<ul class="primario">
 		<li><a href="./principal.html">Principal</a></li>
-		<li><a href="./BusqAdvan.html">Buqueda advanzada</a></li>
+		<li><a href="./BusqAdvan.html">Búsqueda avanzada</a></li>
+		<li class="Adropdown">
+			<a href="#">Social &#x25BE;</a>
+			<ul class="dropdown">
+				<li><a href="./Perfil.html">Perfil</a></li>
+				<li><a href="./EditarPerfil.html">Editar Perfil</a></li>
+				<li><a href="./listadeseos.html">Lista de deseos</a></li>
+				<li><a href="./chat.php">Chat</a></li>
+				<li><a href="./historial.html">Historial</a></li>
+			</ul>
+		</li>
+	
+		<li class="Adropdown">
+			<a href="#">Ventas &#x25BE;</a>
+			<ul class="dropdown">
+				<li><a href="./venta.html">Nueva venta</a></li>
+				<li><a href="./AprobarProductos.html">Aprobar Productos</a></li>
+				<li><a href="./Categorias.html">Crear categorias</a></li>
+				<li><a href="./VentasVendedor.html">Mis ventas</a></li>
+			</ul>
+		</li>
+	
 		<li>
-		  <a href="#">Social &#x25BE;</a>
-		  <ul class="dropdown">
-		   <li><a href="./Perfil.html">Perfil</a></li>
-		   <li><a href="./EditarPerfil.html">Editar Perfil</a></li>
-		   <li><a href="./listadeseos.html">Lista de deseos</a></li>
-		   <li><a href="./chat.php">Chat</a></li>
-		   <li><a href="./historial.html">Historial</a></li>
-		  </ul>
-		  </li>
+			<a href="./utilidades/CerrarSesion.php">Salir</a>
+		</li>
 		<li>
-		  <a href="#">Ventas &#x25BE;</a>
-		  <ul class="dropdown">
-		   <li><a href="./venta.html">Nueva venta</a></li>
-		   <li><a href="./AprobarProductos.html">Aprobar Productos</a></li>
-		   <li><a href="./Categorias.html">Crear categorias</a></li>
-		   <li><a href="./VentasVendedor.html">Mis ventas</a></li>
-		  </ul>
-		  </li>
-		  <li><a href="./utilidades/CerrarSesion.php">Salir</a></li>
-		  <li>
-		   <div class="buscar">
-		   <input type="text" placeholder="Buscar" required />
-	 
-		   <div class="btn">
-			 <i class="fas fa-search icon"></i>
-		   </div>
-		 </div>
-	   </li>
-		
-	 </ul>
-
+			<div class="buscar">
+				<input type="text" placeholder="Buscar" required />
+				<div class="btnn">
+					<i class="fas fa-search icon"></i>
+				</div>
+			</div>
+		</li>
+	</ul>
+	<br><br>
 	<main class="contenedor">
 		<article>
-            <table id="tabla-consulta-detallada" class="tabla-consulta-detallada">
-                <caption>Consulta detallada</caption>
-                <thead>
-                  <tr>
-                    <th>Fecha y hora</th>
-                    <th>Categoría</th>
-                    <th>Producto</th>
-                    <th>Calificación</th>
-                    <th>Precio</th>
-                    <th>Existencia actual</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
-                </tbody>
-              </table>
-
-            <input type="text" placeholder="Buscar">
+			<table id="tabla-consulta-detallada" class="tabla-consulta-detallada">
+				<caption>Consulta detallada</caption>
+				<thead>
+					<tr>
+						<th>Fecha y hora</th>
+						<th>Categoría</th>
+						<th>Producto</th>
+						<th>Calificación</th>
+						<th>Precio</th>
+						<th>Existencia actual</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+				</tbody>
+			</table>
+	
+			<input type="text" placeholder="Buscar">
 			<button id="botonBuscar">Buscar</button>
-			<select id = "selectCategoria"></select>
-			<input type = "checkbox" id = "checkCategoria">
-			<label for = "checkCategoria">Filtrar categoria</label><br>
-			<label for = "inputFechaInicio">Inicio: </label>
- 			<input type = "date" id = "inputFechaInicio">
-			 <label for = "inputFechaFinal">Final: </label>
-			 <input type = "date" id = "inputFechaFinal">
-			<input type = "checkbox" id = "checkFechas">
-			<label for = "checkFechas">Filtrar fechas</label><br>
-
-            <table id="tabla-consulta-agrupada" class="tabla-consulta-agrupada">
-                <caption>Consulta agrupada</caption>
-                <thead>
-                  <tr>
-                    <th>Mes-Año</th>
-                    <th>Categoría</th>
-                    <th>Ventas</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
-                </tbody>
-              </table>
-
-              <input type="text" placeholder="Buscar">
-              <button id="botonBuscarAgrupado">Buscar</button>
-              <select id = "selectCategoriaAgrupado"></select>
-              <input type = "checkbox" id = "checkCategoriaAgrupado">
-              <label for = "checkCategoria">Filtrar categoria</label><br>
-              <label for = "inputFechaInicio">Inicio: </label>
-               <input type = "date" id = "inputFechaInicioAgrupado">
-               <label for = "inputFechaFinal">Final: </label>
-               <input type = "date" id = "inputFechaFinalAgrupado">
-              <input type = "checkbox" id = "checkFechasAgrupado">
-              <label for = "checkFechas">Filtrar fechas</label><br>
-  
+			<select id="selectCategoria"></select>
+			<input type="checkbox" id="checkCategoria">
+			<label for="checkCategoria">Filtrar categoria</label><br>
+			<label for="inputFechaInicio">Inicio: </label>
+			<input type="date" id="inputFechaInicio">
+			<label for="inputFechaFinal">Final: </label>
+			<input type="date" id="inputFechaFinal">
+			<input type="checkbox" id="checkFechas">
+			<label for="checkFechas">Filtrar fechas</label><br>
+	
+			<table id="tabla-consulta-agrupada" class="tabla-consulta-agrupada">
+				<caption>Consulta agrupada</caption>
+				<thead>
+					<tr>
+						<th>Mes-Año</th>
+						<th>Categoría</th>
+						<th>Ventas</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+				</tbody>
+			</table>
+	
+			<input type="text" placeholder="Buscar">
+			<button id="botonBuscarAgrupado">Buscar</button>
+			<select id="selectCategoriaAgrupado"></select>
+			<input type="checkbox" id="checkCategoriaAgrupado">
+			<label for="checkCategoria">Filtrar categoria</label><br>
+			<label for="inputFechaInicio">Inicio: </label>
+			<input type="date" id="inputFechaInicioAgrupado">
+			<label for="inputFechaFinal">Final: </label>
+			<input type="date" id="inputFechaFinalAgrupado">
+			<input type="checkbox" id="checkFechasAgrupado">
+			<label for="checkFechas">Filtrar fechas</label><br>
+	
 		</article>
 	</main>
 	
