--- a/BusqAdvan.html
+++ b/BusqAdvan.html
@@ -93,7 +93,7 @@
         </div>
 
         <!--<button type="button" class="botonbusqueda">Buscar</button>-->
-        <button type="button" class="btn btn-primary mt-3" style="width: 150px;">Buscar</button>
+        <button type="button" class="btn btn-primary mt-3 botonbusqueda" style="width: 150px;">Buscar</button>
       </form>
     </div>
   </div>
