--- a/venta.html
+++ b/venta.html
@@ -9,14 +9,22 @@
 	<link rel="stylesheet" href="./Css/navbar.css">
 	<script src="./Js/jquery-3.7.1.min.js"></script>
 	<script src="./Js/ventas.js"></script>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+	
 	<title>Venta</title>
 </head>
 
 <body>
-	<ul>
+	<ul class="primario">
 		<li><a href="./principal.html">Principal</a></li>
-		<li><a href="./BusqAdvan.html">Buqueda advanzada</a></li>
-		<li>
+		<li><a href="./BusqAdvan.html">Búsqueda avanzada</a></li>
+		<li class="Adropdown">
 			<a href="#">Social &#x25BE;</a>
 			<ul class="dropdown">
 				<li><a href="./Perfil.html">Perfil</a></li>
@@ -26,7 +34,8 @@
 				<li><a href="./historial.html">Historial</a></li>
 			</ul>
 		</li>
-		<li>
+	
+		<li class="Adropdown">
 			<a href="#">Ventas &#x25BE;</a>
 			<ul class="dropdown">
 				<li><a href="./venta.html">Nueva venta</a></li>
@@ -35,17 +44,18 @@
 				<li><a href="./VentasVendedor.html">Mis ventas</a></li>
 			</ul>
 		</li>
-		<li><a href="./utilidades/CerrarSesion.php">Salir</a></li>
+	
+		<li>
+			<a href="./utilidades/CerrarSesion.php">Salir</a>
+		</li>
 		<li>
 			<div class="buscar">
 				<input type="text" placeholder="Buscar" required />
-
-				<div class="btn">
+				<div class="btnn">
 					<i class="fas fa-search icon"></i>
 				</div>
 			</div>
 		</li>
-
 	</ul>
 
 	<main class="contenedor">
