--- a/carritodecompras.html
+++ b/carritodecompras.html
@@ -86,7 +86,7 @@
 		<h2 class="Titulo mt-4">TU CARRITO</h2>
 		<main class="contenedor">
 			<article id="image-slider-container">
-				<table style="width: 100%" id="TablaProductos">
+				<table style="width: 100%" id="lista-productos">
 					<tr>
 						<th>Foto</th>
 						<th colspan="2">Producto</th>
