--- a/principal.html
+++ b/principal.html
@@ -56,7 +56,7 @@
 		</li>
 	</ul>
 	
-	<main class="contenedor">
+	<main class="contenedor" id="container">
 		<article>
 			<table class="TablaDiseño" id="TablaProductos"></table>
 		</article>
